# librfid

./: CMakeLists.txt  README.md
docs/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  menudata.js  mfrc522_8h.html  mfrc522_8h_source.html  mfrc522__atmega_8c.html  mfrc522__registers_8h.html  mfrc522__registers_8h_source.html  mfrc522__status_8h.html  mfrc522__status_8h_source.html  mfrc522__tiva_8c.html  spi_8h.html  spi_8h_source.html  spi__atmega_8c.html  spi__tiva_8c.html  structUID.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
include/: mfrc522.h  mfrc522_registers.h  mfrc522_status.h  registers.h  spi.h  utils_tiva.h
lib/: spi_atmega.c  spi_tiva.c  utils_tiva.c
src/: mfrc522_atmega.c  mfrc522_tiva.c
